fixing issue with buttons on Safari Mobile

--- a/views/css/style.css
+++ b/views/css/style.css
@@ -44,8 +44,11 @@
 	}
 }
 
-button .navbutton {
-	-webkit-border-radius: 0px !important;
+.navbutton {
+    -moz-border-radius: 0px;
+    -webkit-border-radius: 0px;
+    -khtml-border-radius: 0px;
+    border-radius: 0px;
 }
 
 #map_canvas {
